# flare

./: .gitignore  Cargo.toml  README.md  example-usage.sh  onchain_voting.json
docs/: README.md  drift-all-prices.py  drift-perp-addresses.json  drift-price-fetch.sh  drift-prices.md  find-facebook.sh  on-chain-voting.md  self-custodial-facebook.md
example/: example-accounts.json  onchain_voting.json
src/: args.rs  idl.rs  lib.rs  main.rs  program_executor.rs
