[package]
name = "flare"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anchor-cli = "0.29.0"
anchor-client = "0.29.0"
anchor-lang = "0.29.0"
anchor-syn = "0.29.0"
anyhow = "1.0.79"
bip39 = "2.0.0"
borsh = "0.9.1"
clap = { version = "4.5.1", features = ["derive"] }
flate2 = "1.0.28"
rand = "0.8.5"
serde_json = "1.0.114"
solana-clap-utils = "1.18.2"
solana-client = "1.18.1"
solana-program = "1.18.1"
solana-sdk = "1.18.1"
